fixing alignment

--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -1,6 +1,6 @@
 .header{
     background-color: #ebd3ef;
-    padding: 0.2rem 4rem;
+    padding: 0.2rem 6rem;
     display: flex;
     justify-content: flex-end;
     align-items: stretch;
