--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: calc(100vh - 5.5rem);
     display: flex;
-    gap: 8rem;
+    gap: 12rem;
 }
 
 .home__img{
